--- a/apps/server/pyproject.toml
+++ b/apps/server/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "face-recognition>=1.3.0",
+    "face-recognition-models",
     "mediapipe==0.10.20",
     "opencv-python>=4.11.0.86",
     "scikit-learn>=1.8.0",
+    "setuptools>=75.0.0",
 ]
 
 [dependency-groups]
@@ -28,3 +31,6 @@ extend-select = ["I"]
 quote-style = "double"
 indent-style = "space"
 line-ending = "auto"
+
+[tool.uv.sources]
+face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
