--- a/apps/server/requirements.txt
+++ b/apps/server/requirements.txt
@@ -1,8 +1,12 @@
 absl-py==2.3.1
 attrs==25.4.0
 cffi==2.0.0
+click==8.3.1
 contourpy==1.3.3
 cycler==0.12.1
+dlib==20.0.0
+face-recognition==1.3.0
+face_recognition_models @ git+https://github.com/ageitgey/face_recognition_models@e67de717267507d1e9246de95692eb8be736ab61
 flatbuffers==25.12.19
 fonttools==4.61.1
 jax==0.7.1
@@ -26,6 +30,7 @@ ruff==0.14.13
 scikit-learn==1.8.0
 scipy==1.17.0
 sentencepiece==0.2.1
+setuptools==80.9.0
 six==1.17.0
 sounddevice==0.5.3
 threadpoolctl==3.6.0
