--- a/apps/server/pyproject.toml
+++ b/apps/server/pyproject.toml
@@ -7,8 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "face-recognition>=1.3.0",
     "face-recognition-models",
-    "mediapipe==0.10.20",
-    "opencv-python>=4.11.0.86",
+    "fastapi[standard]>=0.128.0",
+    "opencv-python-headless>=4.12.0.88",
     "scikit-learn>=1.8.0",
     "setuptools>=75.0.0",
 ]
