--- a/apps/server/requirements.txt
+++ b/apps/server/requirements.txt
@@ -1,36 +1,54 @@
-absl-py==2.3.1
-attrs==25.4.0
-cffi==2.0.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+certifi==2026.1.4
 click==8.3.1
-contourpy==1.3.3
-cycler==0.12.1
 dlib==20.0.0
+dnspython==2.8.0
+email-validator==2.3.0
 face-recognition==1.3.0
 face_recognition_models @ git+https://github.com/ageitgey/face_recognition_models@e67de717267507d1e9246de95692eb8be736ab61
-flatbuffers==25.12.19
-fonttools==4.61.1
-jax==0.7.1
-jaxlib==0.7.1
+fastapi==0.128.0
+fastapi-cli==0.0.20
+fastapi-cloud-cli==0.11.0
+fastar==0.8.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+Jinja2==3.1.6
 joblib==1.5.3
-kiwisolver==1.4.9
-matplotlib==3.10.8
-mediapipe==0.10.20
-ml_dtypes==0.5.4
-numpy==1.26.4
-opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
-opt_einsum==3.4.0
-packaging==25.0
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+numpy==2.2.6
+opencv-python-headless==4.12.0.88
 pillow==12.1.0
-protobuf==4.25.8
-pycparser==2.23
-pyparsing==3.3.1
-python-dateutil==2.9.0.post0
+pydantic==2.12.5
+pydantic-extra-types==2.11.0
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+Pygments==2.19.2
+python-dotenv==1.2.1
+python-multipart==0.0.21
+PyYAML==6.0.3
+rich==14.2.0
+rich-toolkit==0.17.1
+rignore==0.7.6
 ruff==0.14.13
 scikit-learn==1.8.0
 scipy==1.17.0
-sentencepiece==0.2.1
+sentry-sdk==2.49.0
 setuptools==80.9.0
-six==1.17.0
-sounddevice==0.5.3
+shellingham==1.5.4
+starlette==0.50.0
 threadpoolctl==3.6.0
+typer==0.21.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.3
+uvicorn==0.40.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==16.0
