refactor (client): configure client app
- All source code was moved to `src/`
- Create gitignore
- Configure vscode to detect app's virtual environment
- Configure UV as package manager and the respective requirements.txt
- Delete __pycache__ files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "editor.formatOnSave": true
   },
   "python.analysis.extraPaths": [
-    "./apps/server"
+    "./apps/server",
+    "./apps/client"
   ]
 }
