feat: the client was prepared to be used with a REST server, and it's actually a websocket, so I made the change and created a function to make that connection. Another thing, the threshold is actually server logic, so I deleted the option in the CLI, but I don't discard that idea in the future... could be interesing

--- a/apps/client/pyproject.toml
+++ b/apps/client/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12.10"
 dependencies = [
+    "asyncio>=4.0.0",
     "mediapipe==0.10.20",
     "opencv-python>=4.11.0.86",
     "websockets>=16.0",
