--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ K_MEANS_CLUSTERS="3"
 # MQTT settings
 MQTT_BROKER_ADDRESS="localhost"
 MQTT_BROKER_PORT="1883"
+MQTT_RETRIES_ATTEMPS="5"
+MQTT_RETRY_DELAY_SECONDS="2"
