--- a/apps/server/pyproject.toml
+++ b/apps/server/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "face-recognition-models",
     "fastapi[standard]>=0.128.0",
     "opencv-python-headless>=4.12.0.88",
+    "paho-mqtt>=2.1.0",
     "scikit-learn>=1.8.0",
     "setuptools>=75.0.0",
 ]
